--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
     </div>
 
     <div id="status" class="status-online">ONLINE</div>
+    <button id="fs-btn" class="fs-btn">⛶</button>
   </div>
 </header>
 
